--- a/front_unete/package.json
+++ b/front_unete/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.473.0",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "axios": "^1.7.9",
+    "lucide-react": "^0.474.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
